# boko

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: conversion.rs
docs/: kvg-format.md
examples/: kvg_typeset.rs  profile_convert.rs
fuzz/: Cargo.toml
fuzz/corpus/from_bytes/: seed_azw3  seed_epub  seed_kfx  seed_mobi
fuzz/fuzz_targets/: container_parse.rs  from_bytes.rs  ion_roundtrip.rs
src/: book.rs  error.rs  lib.rs  main.rs  optimize.rs  resolved.rs  util.rs
src/dom/: arena.rs  element_ref.rs  mod.rs  transform.rs  tree_sink.rs
src/epub/: mod.rs  parser.rs
src/export/: azw3.rs  epub.rs  html_synth.rs  kfx.rs  mod.rs  normalize.rs  text.rs
src/import/: azw3.rs  epub.rs  kfx.rs  mobi.rs  mod.rs
src/kfx/: container.rs  context.rs  cover.rs  ion.rs  metadata.rs  schema.rs  serialization.rs  style_registry.rs  style_schema.rs  tokens.rs  transforms.rs
src/markdown/: escape.rs  render.rs
src/math/: latex.rs  mathml.rs  mod.rs
src/mobi/: filepos.rs  huffcdic.rs  index.rs  mod.rs  parser.rs  skeleton.rs  split.rs  tbs.rs  writer_transform.rs
tests/: azw3_large_book.rs  azw3_roundtrip.rs  cascade_golden.rs  corpus.rs  epub3_nav_toc.rs  epub_exports_fonts_and_toc.rs  epub_href_decoding.rs  error_classification.rs  export_validity.rs  font_deobfuscation.rs  kfx_conformance.rs  kfx_cover.rs  kfx_dump_golden.rs  kfx_font_extraction.rs  kfx_table_roundtrip.rs  link_resolution.rs  markdown_pipeline.rs  normalized_export.rs  optimize_assets.rs  parser_crash_corpus.rs
tools/: kfxcheck.py  kvg2svg.py
web/: app.js  index.html
(+40 files in other folders)
